# match_linestrings

./: .gitignore  Cargo.toml  README.md  backend_bg.wasm  index.html  review.html  test_cases.md
.github/workflows/: web.yml
assets/: Settings-098cbd8c.js  Settings-12cb8421.css  Settings-26083545.js  Settings-2ZefSxxh.css  Settings-31db2d77.js  Settings-4a4172f4.js  Settings-51e448bf.js  Settings-52815a8f.js  Settings-6rLOvLgU.css  Settings-77c9c1f0.js  Settings-7de68ec9.js  Settings-950b305b.css  Settings-BJQ4WG3w.css  Settings-BJbrOL-r.css  Settings-BJe39ZDU.js  Settings-CIHFOGW5.js  Settings-CV3NVTZE.js  Settings-CVLmKh1f.js  Settings-C_jMbddS.js  Settings-DNLyDdjl.js  Settings-Dy5De1sV.js  Settings-aCCF39mr.js  Settings-aed3d936.js  Settings-e8a97dfe.js  Settings-heQG0fDQ.css  backend_bg.wasm  index-a3b74b58.css  index-e5382d7a.css  main-08bd0388.js  main-0ff2e9b1.js  main-23375eab.js  main-2438b291.js  main-3eda7c6b.js  main-43f31f5f.js  main-45ed47db.js  main-4XYGSpmo.js  main-6a837c1b.js  main-76d356e2.js  main-7cadb159.js  main-816ca4da.js  (+48 more)
backend/: Cargo.toml
backend/src/: lib.rs
cli/: Cargo.toml
match_linestrings/: Cargo.toml
match_linestrings/src/: lib.rs
src/: main.rs
tests/: README.md  clean_gj.js  leeds-bradford.R  leeds-bradford.py
tests/braganza_street/: sources.geojson  targets.geojson
tests/churchyard_row/: sources.geojson  targets.geojson
tests/long_target_many_sources/: sources.geojson
tests/meanwood_road/: sources.geojson  targets.geojson
tests/old/exact_match/: sources.geojson  targets.geojson
tests/old/long_target_many_sources/: targets.geojson
tests/old/source_bends_away/: sources.geojson
tests/source_bends_away/: targets.geojson
tests/southwark/: source.geojson  target.geojson
tests/weserstraße/: sources.geojson  targets.geojson
web/: index.html  package-lock.json  package.json  review.html  vite.config.ts
web/src/: App.svelte  Settings.svelte
web/src/test/: Form.svelte  ProgressBar.svelte  ReviewMatches.svelte  SetupMode.svelte  index.ts
web/src/utils/: MapContextMenu.svelte  StandardControls.svelte
web/src/utils/basemaps/: Basemaps.svelte  index.ts
