[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
geo = { workspace = true }
geojson = { workspace = true }
js-sys = "0.3.69"
log = "0.4.20"
match_linestrings = { path = "../match_linestrings" }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.0"
utils = { workspace = true }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
