[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
geo = { workspace = true }
geojson = { workspace = true }
match_linestrings = { path = "../match_linestrings" }
rstar = { workspace = true }
serde_json = { workspace = true }
utils = { workspace = true }
