[package]
name = "match_linestrings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
geo = "0.29.3"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
rstar = "0.12.0"
serde = "1.0.188"
serde_json = "1.0.133"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
